[gd_scene load_steps=14 format=3 uid="uid://barjr2wm3ff2b"]

[ext_resource type="Texture2D" uid="uid://b26e5blucqamm" path="res://backgrounds/fondo2.jpg" id="1_ley32"]
[ext_resource type="Script" path="res://scripts_project/inicio_de_sesion_correo.gd" id="1_n5m1x"]
[ext_resource type="Texture2D" uid="uid://di3elv7ufou2r" path="res://icons/flecha-atras.png" id="2_qwaar"]
[ext_resource type="Texture2D" uid="uid://edwypwcli46n" path="res://icons/edfunnygames.png" id="3_h6iys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5ivb"]
bg_color = Color(0.482353, 0.568627, 0.694118, 1)
border_width_left = 13
border_width_top = 9
border_width_bottom = 9
border_color = Color(0.482353, 0.568627, 0.694118, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xm0sy"]
bg_color = Color(0.482353, 0.568627, 0.694118, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2psj"]
bg_color = Color(0.482353, 0.568627, 0.694118, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="FontVariation" id="FontVariation_d1n7b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c72u8"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.662745, 0.52549, 0.772549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h65hx"]
bg_color = Color(0.552941, 0.403922, 0.666667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wrh3x"]
bg_color = Color(0.396078, 0.207843, 0.482353, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8

[sub_resource type="LabelSettings" id="LabelSettings_freby"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_nvqtj"]
content_margin_left = 10.0
content_margin_top = 11.0
content_margin_right = 12.0
content_margin_bottom = 5.0

[node name="InicioDeSesionCorreo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n5m1x")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ley32")

[node name="MarginContainerColor" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 524.0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainerColor"]
layout_mode = 2
color = Color(0.34902, 0.423529, 0.533333, 1)

[node name="MarginContainerLogo" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = 20.0
offset_top = 14.0
offset_right = 109.0
offset_bottom = 103.0

[node name="logoEdFunny" type="TextureRect" parent="MarginContainerLogo"]
layout_mode = 2
texture = ExtResource("3_h6iys")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 86.0
offset_top = -222.0
offset_right = 448.0
offset_bottom = 227.0
grow_vertical = 2

[node name="inicioSesionLabel" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Iniciar Sesión"
horizontal_alignment = 1

[node name="labelValidacion" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="correoInput" type="LineEdit" parent="VBoxContainer"]
show_behind_parent = true
texture_filter = 1
layout_mode = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_n5ivb")
theme_override_styles/focus = SubResource("StyleBoxFlat_xm0sy")
placeholder_text = "E-MAIL"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 26

[node name="contrasenaInput" type="LineEdit" parent="VBoxContainer"]
texture_filter = 1
clip_contents = true
layout_mode = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_n5ivb")
theme_override_styles/focus = SubResource("StyleBoxFlat_y2psj")
placeholder_text = "CONTRASEÑA"
secret = true

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 26

[node name="BoxContainerSesionAct" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BoxContSesionAct" type="VBoxContainer" parent="VBoxContainer/BoxContainerSesionAct"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="MarginContainerUp" type="MarginContainer" parent="VBoxContainer/BoxContainerSesionAct/BoxContSesionAct"]
layout_mode = 2

[node name="sesionCheckBox" type="CheckBox" parent="VBoxContainer/BoxContainerSesionAct/BoxContSesionAct"]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 0
mouse_force_pass_scroll_events = false
theme_override_constants/h_separation = 0
theme_override_constants/check_v_offset = 0
theme_override_constants/outline_size = 0
theme_override_fonts/font = SubResource("FontVariation_d1n7b")
shortcut_feedback = false
shortcut_in_tooltip = false

[node name="MarginContainerDown" type="MarginContainer" parent="VBoxContainer/BoxContainerSesionAct/BoxContSesionAct"]
layout_mode = 2
theme_override_constants/margin_top = 1

[node name="MarginContainerRight" type="MarginContainer" parent="VBoxContainer/BoxContainerSesionAct"]
layout_mode = 2
theme_override_constants/margin_right = -1

[node name="sesionActivaLabel" type="Label" parent="VBoxContainer/BoxContainerSesionAct"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Mantener Sesión Iniciada"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 17

[node name="inicioSesionButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_c72u8")
theme_override_styles/hover = SubResource("StyleBoxFlat_h65hx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wrh3x")
text = "INICIAR SESIÓN"

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 36

[node name="BoxContRContrasena" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="preguntaLabel" type="Label" parent="VBoxContainer/BoxContRContrasena"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 18
text = "¿Olvidó su contraseña?"
label_settings = SubResource("LabelSettings_freby")
horizontal_alignment = 1
vertical_alignment = 1

[node name="passwordRecoveryButton" type="Button" parent="VBoxContainer/BoxContRContrasena"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.235294, 0.72549, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.662745, 0.52549, 0.772549, 1)
theme_override_colors/font_focus_color = Color(0.662745, 0.52549, 0.772549, 1)
theme_override_font_sizes/font_size = 18
text = "Clic aquí"
flat = true

[node name="RegresarButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -96.0
offset_right = 72.0
offset_bottom = -23.0
grow_vertical = 0
focus_mode = 0
theme_override_styles/pressed = SubResource("StyleBoxLine_nvqtj")
toggle_mode = true
icon = ExtResource("2_qwaar")
flat = true
expand_icon = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBoxContainer/BoxContainerSesionAct/BoxContSesionAct/sesionCheckBox" to="." method="_on_sesion_check_box_pressed"]
[connection signal="pressed" from="VBoxContainer/inicioSesionButton" to="." method="_on_inicio_sesion_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BoxContRContrasena/passwordRecoveryButton" to="." method="_on_password_recovery_button_pressed"]
[connection signal="pressed" from="RegresarButton" to="." method="_on_back_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
